# qt-workspace

./: .gitignore  README.md  WORKFLOWS.md
scripts/: build.sh  new-project.sh
templates/qt-app-base/: .gitignore  CMakeLists.txt  README.md
templates/qt-app-base/scripts/: rename_project.sh
templates/qt-app-base/src/: CMakeLists.txt  main.cpp
